<resources>
    <string name="app_name">Do IT</string>
    <string name="title_activity_kanban">KanbanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="dashboard">Dashboard</string>
    <string name="note">Note</string>
    <string name="add_note">Add a note...</string>
    <string name="notes">Notes:</string>
    <string name="title">Title</string>
    <string name="enter_a_note">Enter a note...</string>
    <string name="characters">Characters</string>
    <string name="chain">Chain</string>
    <string name="add_a_target">Add a target</string>
    <string name="step">Step</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_delete_target">Are you sure you want to permanently delete your target? This action is irreversible</string>
    <string name="cancel">Cancel</string>
    <string name="new_list">New List</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="create_list">Create list</string>
    <string name="completed">Completed</string>
    <string name="add_a_task">Add a task</string>
    <string name="add">Add</string>
    <string name="edit_list">Edit list</string>
    <string name="save">Save</string>
    <string name="remind_me">Remind me</string>
    <string name="write_your_note">Write your note</string>
    <string name="are_you_sure_delete_task">Are you sure you want to permanently delete your task? This action is irreversible</string>
    <string name="to_do">To Do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="go_to_kanban">Go to Kanban</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="stop_this_pomodoro">Stop this Pomodoro?</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_delete_note">Are you sure you want to permanently delete your note? This action is irreversible</string>
    <string name="are_you_sure_delete_list">Are you sure you want to permanently delete your list? This action is irreversible</string>
    <string name="remind_me_at">Remind me at</string>
    <string name="congratulation">Congratulation</string>
    <string name="write_target">Write target</string>
    <string name="seven_days">7 days</string>
    <string name="twenty_one_days">21 days</string>
    <string name="one_month">1 month</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="one_year">1 year</string>
    <string name="reminder">Reminder</string>
    <string name="already_made_step">You already made a step today</string>
    <string name="to_do_list">To Do List</string>
    <string name="done_button">Done</string>


</resources>