<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#FFFFFF">


    <RadioGroup
        android:id="@+id/zinciri_kirma_radioGroup_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_7_days"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/seven_days"
                android:checked="true"
                android:textColor="@drawable/radio_button_text_color" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_21_days"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/twenty_one_days"
                android:textColor="@drawable/radio_button_text_color" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_1_month"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/one_month"
                android:textColor="@drawable/radio_button_text_color" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/zinciri_kirma_radioGroup_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/zinciri_kirma_radioGroup_one">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_3_months"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/three_months"
            android:textColor="@drawable/radio_button_text_color" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_6_months"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/six_months"
            android:textColor="@drawable/radio_button_text_color" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_1_year"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/one_year"
            android:textColor="@drawable/radio_button_text_color" />
    </RadioGroup>

    <EditText
        android:id="@+id/zinciri_kirma_editText"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:gravity="top"
        android:hint="@string/write_target"
        android:textColor="#A9A9A9"
        android:textColorHint="#A9A9A9"
        android:textSize="20sp"
        android:background="@null"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zinciri_kirma_radioGroup_two" />


    <Button
        android:id="@+id/dialog_add_a_target"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/add_a_target"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:cornerRadius="20dp"
        android:background="@drawable/custom_button_background"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/zinciri_kirma_editText"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/zinciri_kirma_editText"
        app:layout_constraintTop_toBottomOf="@+id/zinciri_kirma_editText" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/zinciri_kirma_editText"
        app:layout_constraintStart_toStartOf="@+id/zinciri_kirma_editText"
        app:layout_constraintTop_toBottomOf="@+id/zinciri_kirma_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>