<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/new_list_dialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_list"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_list_dialog_ditText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/enter_list_name"
        android:textColor="#A9A9A9"
        android:textColorHint="#A9A9A9"
        android:textSize="20sp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_list_dialog_title_text"
        app:layout_constraintTop_toBottomOf="@+id/new_list_dialog_title_text" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/new_list_dialog_ditText"
        app:layout_constraintStart_toStartOf="@+id/new_list_dialog_ditText"
        app:layout_constraintTop_toBottomOf="@+id/new_list_dialog_ditText" />

    <HorizontalScrollView
        android:id="@+id/scroll_view_palette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/new_list_dialog_ditText"
        app:layout_constraintStart_toStartOf="@+id/new_list_dialog_ditText"
        app:layout_constraintTop_toBottomOf="@+id/new_list_dialog_ditText">

        <com.thebluealliance.spectrum.SpectrumPalette
            android:id="@+id/new_list_dialog_palette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:spectrum_columnCount="10"
            app:spectrum_colors="@array/colors" />

    </HorizontalScrollView>

    <Button
        android:id="@+id/new_list_dialog_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textColor="#707070"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/new_list_dialog_create_button"
        app:layout_constraintTop_toTopOf="@+id/new_list_dialog_create_button" />

    <Button
        android:id="@+id/new_list_dialog_create_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_list"
        android:textColor="#56E39F"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/new_list_dialog_ditText"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_palette" />

</androidx.constraintlayout.widget.ConstraintLayout>