<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_id">


    <EditText
        android:id="@+id/bottom_sheet_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/title"
        android:textAlignment="textStart"
        android:textColor="#707070"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@null"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toStartOf="@+id/bottom_sheet_dialog_done_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottom_sheet_dialog_done_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:textStyle="bold"
        android:textColor="@drawable/done_button_text_color"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_sheet_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_sheet_dialog_title" />

    <EditText
        android:id="@+id/bottom_sheet_dialog_note"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:hint="@string/enter_a_note"
        android:textColor="#707070"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:background="@null"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_dialog_done_button"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_dialog_title" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_dialog_note"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_dialog_note"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_dialog_note"
        app:layout_constraintVertical_bias="0.5">

        <com.thebluealliance.spectrum.SpectrumPalette
            android:id="@+id/bottom_sheet_dialog_palette"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:spectrum_colors="@array/colorsForNote"
            app:spectrum_columnCount="10" />
    </HorizontalScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_dialog_title" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_dialog_note"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_dialog_note"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_dialog_note" />

</androidx.constraintlayout.widget.ConstraintLayout>